Fix spacing on forgot password text

--- a/app/styles/components/profile.scss
+++ b/app/styles/components/profile.scss
@@ -281,7 +281,7 @@
     }
 
     .disclaimer {
-      margin-top: 35px;
+      margin-top: 5px;
       padding: 15px;
 
     }
